--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,60 @@
     min-width: 1rem !important;
     height: 1rem !important;
 }
+
+.recentQueryCard {
+    padding: 10px!important;
+}
+
+.recentQueryCard  .MuiCardHeader-action {
+    margin-top: 2px;
+    margin-right: -4px;
+}
+
+.recentQueryCard  .MuiCardHeader-action,
+.recentQueryCard  .MuiCardHeader-subheader {
+    font-size: 11px;
+}
+
+.display-object div {
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 130px;
+    max-height: 100%;
+    display: block;
+    white-space: nowrap;
+    cursor: pointer;
+  }
+  
+  /* Optional: Tooltip styles */
+  .display-object .tooltip::before {
+    content: attr(title);
+    position: absolute;
+    display: none;
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: pre-wrap;
+    z-index: 1;
+  }
+  
+  .display-object .tooltip:hover::before {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .schemaDiag {
+    width: 500px;
+    height: 500px;
+    margin-left: 10%;
+  }
+
+  .mainContent {
+    margin-top: auto;
+    padding-top: 60px;
+  }
